# flake8-github

./: .bandit  .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
.github/workflows/: CODEOWNERS  ci.yaml  release.yaml
flake8_github/: __init__.py  __version__.py
